--- a/public/about.html
+++ b/public/about.html
@@ -36,7 +36,7 @@
 
       <p>
         <img src="/assets/low-profile-dog.png" alt="Illustration of Hoodie’s 'Low-Profile Dog' waving" class="low-profile-dog">
-        Hoodie Tracker is a simple application to get started with Hoodie.
+        Hoodie Tracker is a simple application to get starfted with Hoodie.
         It implements all the features that Hoodie gives you for free:
       </p>
 
